This will add the new Tips Management

--- a/ModManager.Interface/ModManager.Interface.csproj
+++ b/ModManager.Interface/ModManager.Interface.csproj
@@ -129,6 +129,8 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="TipsManagement\ITips.cs" />
+    <Compile Include="TipsManagement\ITipsManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChinhDo.Transactions.FileManager\ChinhDo.Transactions.FileManager.csproj">
