--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -157,6 +157,9 @@
       <DependentUpon>DownloadSettingsPage.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="TipsManagement\Balloon.resx" />
+    <EmbeddedResource Include="TipsManagement\BalloonVM.resx" />
+    <EmbeddedResource Include="TipsManagement\Hooks\WindowsHook.resx" />
     <EmbeddedResource Include="UI\Controls\GameModeListViewItem.resx">
       <DependentUpon>GameModeListViewItem.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -241,9 +244,29 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="TipsManagement\Balloon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TipsManagement\BalloonManager.cs" />
+    <Compile Include="TipsManagement\BalloonVM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TipsManagement\HitTestCodes.cs" />
+    <Compile Include="TipsManagement\Hooks\BaseHook.cs" />
+    <Compile Include="TipsManagement\Hooks\CallWndProcHook.cs" />
+    <Compile Include="TipsManagement\Hooks\CallWndProcRetHook.cs" />
+    <Compile Include="TipsManagement\Hooks\KeyBoardHook.cs" />
+    <Compile Include="TipsManagement\Hooks\MouseHook.cs" />
+    <Compile Include="TipsManagement\Hooks\WindowsHook.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TipsManagement\Tips.cs" />
     <Compile Include="Util\NexusFileUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Tips.xml" />
+    <None Include="Resources\tipsClose.png" />
+    <None Include="Resources\tips.png" />
     <None Include="Resources\uac-icon.png" />
     <None Include="data\releasenotes.rtf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -300,6 +323,9 @@
     <Content Include="data\7z-64bit.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\arrow_state_blue_left.png" />
+    <None Include="Resources\arrow_state_blue_right.png" />
+    <None Include="Resources\help_book.png" />
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\update_warning_disabled.png" />
     <None Include="Resources\update_warning.png" />
@@ -522,6 +548,7 @@
     <None Include="Resources\077_AddFile_48x48_72.png" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="ICSharpCode.TextEditor, Version=3.2.1.6466, Culture=neutral, PublicKeyToken=4d61825e8dd49f1a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\ICSharpCode.TextEditor.dll</HintPath>
