--- a/Fallout3/Fallout3.csproj
+++ b/Fallout3/Fallout3.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Fallout3GameModeDescriptor.cs" />
     <Compile Include="Fallout3GameModeFactory.cs" />
     <Compile Include="Fallout3Launcher.cs" />
+    <Compile Include="Fallout3SupportedTools.cs" />
     <Compile Include="FalloutSettingsFiles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -65,6 +66,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings\SupportedToolsSettingsGroup.cs" />
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.designer.cs" />
     <Compile Include="Tools\AI\ArchiveInvalidation.cs" />
     <Compile Include="Tools\Fallout3ToolLauncher.cs" />
   </ItemGroup>
@@ -104,6 +110,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Settings\UI\SupportedToolsSettingsPage.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\fo3_logo.ico" />
