--- a/FalloutNV/FalloutNV.csproj
+++ b/FalloutNV/FalloutNV.csproj
@@ -55,12 +55,18 @@
     <Compile Include="FalloutNVGameMode.cs" />
     <Compile Include="FalloutNVLauncher.cs" />
     <Compile Include="FalloutNVSettingsFiles.cs" />
+    <Compile Include="FalloutNVSupportedTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings\SupportedToolsSettingsGroup.cs" />
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.designer.cs" />
     <Compile Include="Tools\AI\ArchiveInvalidation.cs" />
     <Compile Include="Tools\FalloutNVToolLauncher.cs" />
   </ItemGroup>
@@ -100,6 +106,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Settings\UI\SupportedToolsSettingsPage.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\tes_logo.ico" />
