--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -279,6 +279,24 @@
      <PerGameModeSettingsOfString />
     </value>
    </setting>
+   <setting name="BOSSFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="WryeBashFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="FNISFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="CheckForTipsOnStartup" serializeAs="String">
+    <value>True</value>
+   </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
