--- a/Oblivion/Oblivion.csproj
+++ b/Oblivion/Oblivion.csproj
@@ -53,12 +53,16 @@
     <Compile Include="OblivionGameModeFactory.cs" />
     <Compile Include="OblivionLauncher.cs" />
     <Compile Include="OblivionGameMode.cs" />
+    <Compile Include="OblivionSupportedTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings\SupportedToolsSettingsGroup.cs" />
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.cs" />
+    <Compile Include="Settings\UI\SupportedToolsSettingsPage.designer.cs" />
     <Compile Include="Tools\AI\ArchiveInvalidation.cs" />
     <Compile Include="Tools\OblivionToolLauncher.cs" />
   </ItemGroup>
@@ -68,6 +72,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Settings\UI\SupportedToolsSettingsPage.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\tes_logo.ico" />
