Many fixes to the profiling build (not limited to this list): some Fallout fomods installers unable to install, UAC blocking FNIS when lanunched after a profile switch, issue with link overwrites, missing installer for some mods, some normal mods unable to install, crash when trying to remove a file or folder, many crashes related to a wrong call while retrieving links in profiles, rare occurrence of NMM retrieving the wrong path for the Mods and Install Info folders, NMM getting stuck while checking registry values, NMM will try to find the FNIS path, many fixes to the supportedtools functionality, tweaked the way supportedtools are saved, added LOOT and TES5Edit to Skyrim, Added FNB4Gb launch command to FNV...

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -101,6 +101,12 @@
     <Setting Name="ShowStartupMessage" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="CheckForTipsOnStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ForceHardLinks" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
     <Setting Name="HelpLinks" Type="Nexus.Client.Settings.KeyedSettings`1[System.String]" Scope="Application">
       <Value Profile="(Default)">
      &lt;KeyedSettingsOfString&gt;
@@ -214,23 +220,10 @@
      &lt;PerGameModeSettingsOfString /&gt;
     </Value>
     </Setting>
-    <Setting Name="BOSSFolder" Type="Nexus.Client.Settings.PerGameModeSettings`1[System.String]" Scope="User">
+    <Setting Name="SupportedTools" Type="Nexus.Client.Settings.PerGameModeSettings`1[Nexus.Client.Settings.KeyedSettings`1[System.String]]" Scope="User">
       <Value Profile="(Default)">
-     &lt;PerGameModeSettingsOfString /&gt;
+     &lt;PerGameModeSettingsOfKeyedSettingsOfString /&gt;
     </Value>
-    </Setting>
-    <Setting Name="WryeBashFolder" Type="Nexus.Client.Settings.PerGameModeSettings`1[System.String]" Scope="User">
-      <Value Profile="(Default)">
-     &lt;PerGameModeSettingsOfString /&gt;
-    </Value>
-    </Setting>
-    <Setting Name="FNISFolder" Type="Nexus.Client.Settings.PerGameModeSettings`1[System.String]" Scope="User">
-      <Value Profile="(Default)">
-     &lt;PerGameModeSettingsOfString /&gt;
-    </Value>
-    </Setting>
-    <Setting Name="CheckForTipsOnStartup" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
