--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -183,6 +183,12 @@
    <setting name="ShowStartupMessage" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="CheckForTipsOnStartup" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ForceHardLinks" serializeAs="String">
+    <value>True</value>
+   </setting>
    <setting name="ExecutablePaths" serializeAs="Xml">
     <value>
      <PerGameModeSettingsOfString />
@@ -279,23 +285,10 @@
      <PerGameModeSettingsOfString />
     </value>
    </setting>
-   <setting name="BOSSFolder" serializeAs="Xml">
+   <setting name="SupportedTools" serializeAs="Xml">
     <value>
-     <PerGameModeSettingsOfString />
+     <PerGameModeSettingsOfKeyedSettingsOfString />
     </value>
-   </setting>
-   <setting name="WryeBashFolder" serializeAs="Xml">
-    <value>
-     <PerGameModeSettingsOfString />
-    </value>
-   </setting>
-   <setting name="FNISFolder" serializeAs="Xml">
-    <value>
-     <PerGameModeSettingsOfString />
-    </value>
-   </setting>
-   <setting name="CheckForTipsOnStartup" serializeAs="String">
-    <value>True</value>
    </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
