--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -126,6 +126,13 @@
     <Compile Include="ModManagement\ModRegistry.cs" />
     <Compile Include="ModManagement\ProfileActivationTask.cs" />
     <Compile Include="ModManagement\ProfileManager\ProfileManager.cs" />
+    <Compile Include="ModManagement\ProfileManager\UI\ProfileManagerControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModManagement\ProfileManager\UI\ProfileManagerControl.Designer.cs">
+      <DependentUpon>ProfileManagerControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModManagement\ProfileManager\UI\ProfileManagerVM.cs" />
     <Compile Include="ModManagement\UI\ModManagerControl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +147,7 @@
       <DependentUpon>OverwriteForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ModManagement\VirtualModActivator\VirtualModActivator.cs" />
+    <Compile Include="ModManagement\VirtualModInfo.cs" />
     <Compile Include="ModManagement\VirtualModLink.cs" />
     <Compile Include="Mods\NexusMod.cs" />
     <Compile Include="Mods\NexusModCacheManager.cs" />
@@ -159,6 +167,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GameDetectionForm.resx">
       <DependentUpon>GameDetectionForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModManagement\ProfileManager\UI\ProfileManagerControl.resx">
+      <DependentUpon>ProfileManagerControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Settings\UI\DownloadSettingsPage.resx">
@@ -269,6 +281,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="TipsManagement\Tips.cs" />
+    <Compile Include="UI\Controls\ProfileListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\Controls\ProfileListView.designer.cs">
+      <DependentUpon>ProfileListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Util\NexusFileUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -574,9 +592,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\ICSharpCode.TextEditor.dll</HintPath>
     </Reference>
-    <Reference Include="ObjectListView, Version=2.5.1.25760, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
+    <Reference Include="ObjectListView, Version=2.7.0.31736, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\ObjectListView.dll</HintPath>
+      <HintPath>..\..\ObjectListView 2.8\ObjectListViewDemo\ObjectListView\bin\Release\ObjectListView.dll</HintPath>
     </Reference>
     <Reference Include="SevenZipSharp, Version=0.64.3890.29348, Culture=neutral, PublicKeyToken=20de82c62b055c88, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -588,6 +606,7 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
