--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -290,6 +290,21 @@
      <PerGameModeSettingsOfKeyedSettingsOfString />
     </value>
    </setting>
+   <setting name="VirtualFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="HDLinkFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="MultiHDInstall" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfBoolean />
+    </value>
+   </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
