--- a/ModManager.Interface/ModManager.Interface.csproj
+++ b/ModManager.Interface/ModManager.Interface.csproj
@@ -66,13 +66,27 @@
     <Compile Include="Games\IGameModeEnvironmentInfo.cs" />
     <Compile Include="Games\InstallationPathAutoDetector.cs" />
     <Compile Include="Games\ISupportedToolsLauncher.cs" />
+    <Compile Include="Games\Settings\VirtualDirectoriesSetupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Games\Settings\VirtualDirectoriesSetupForm.Designer.cs">
+      <DependentUpon>VirtualDirectoriesSetupForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Games\Settings\VirtualDirectoriesControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Games\Settings\VirtualDirectoriesControl.Designer.cs">
+      <DependentUpon>VirtualDirectoriesControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Games\Settings\SetupDirectoriesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Games\Settings\SetupDirectoriesControl.Designer.cs">
       <DependentUpon>SetupDirectoriesControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Games\Settings\VirtualDirectoriesControlVM.cs" />
     <Compile Include="Games\Settings\SetupDirectoriesControlVM.cs" />
+    <Compile Include="Games\Settings\VirtualDirectoriesSetupVM.cs" />
     <Compile Include="Games\SetupBaseVM.cs" />
     <Compile Include="Games\Steam\KeyValue.cs" />
     <Compile Include="Games\Steam\StreamHelpers.cs" />
@@ -174,6 +188,10 @@
     <None Include="Resources\DefaultNexusIcon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Games\Settings\VirtualDirectoriesControl.resx">
+      <DependentUpon>VirtualDirectoriesControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Games\Settings\SetupDirectoriesControl.resx">
       <DependentUpon>SetupDirectoriesControl.cs</DependentUpon>
       <SubType>Designer</SubType>
