--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -305,6 +305,9 @@
      <PerGameModeSettingsOfBoolean />
     </value>
    </setting>
+   <setting name="ShowAlphaDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
