Up to date with 0.56 source. Fixed crash caused by custom fonts. Fixed automatic plugin sorting being enabled for unsupported games. Fixed a crash issue caused by a broken config file. Fixed crash while refreshing plugin indices in the plugin?s tab. Fixed crash while trying to change a plugin timestamp and the file is locked by another process. Fixed crash when the program could not find the new installer file on the server. Fixed local mod addition when the source folder contains illegal characters. Fixed automatic plugin sorting being enabled and crashing on Morrowind.

--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Mods\NexusMod.cs" />
     <Compile Include="Mods\NexusModCacheManager.cs" />
     <Compile Include="PluginManagement\AutoPluginSortingTask.cs" />
+    <Compile Include="PluginManagement\ManageMultiplePluginsTask.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ActivityMonitoring\UI\ActivityMonitorControl.resx">
