--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -48,6 +48,8 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/witcher2/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="W2NexusREST">
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/witcher3/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="W3NexusREST">
+			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/xrebirth/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="XRNexusREST">
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/elderscrollsonline/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="TESONexusREST">
