NMM will now be able to keep track of the real downloadID for each mod archive.

--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -380,6 +380,7 @@
     <None Include="Resources\supported_tools.png" />
     <None Include="Resources\round_loading.GIF" />
     <None Include="Resources\edit_delete_16.png" />
+    <None Include="Resources\get_missing_info.png" />
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\update_warning_disabled.png" />
     <None Include="Resources\update_warning.png" />
