Added Mod cache migration prompt.

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -8,6 +8,9 @@
     <Setting Name="InstalledGamesDetected" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+	<Setting Name="CacheOverhaulSetup" Type="System.Boolean" Scope="User">
+	 <Value Profile="(Default)">False</Value>
+	</Setting>
     <Setting Name="RememberedGameMode" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
