--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -310,6 +310,9 @@
    <setting name="ShowAlphaDisclaimer" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="CacheOverhaulSetup" serializeAs="String">
+    <value>False</value>
+   </setting>
   </Nexus.Client.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
