Added preliminary support for Fallout 4.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -32,6 +32,8 @@
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/fallout3/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="FO3NexusREST">
 			</endpoint>
+			<endpoint address="http://nmm.nexusmods.com/fallout4/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="FO4NexusREST">
+			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/skyrim/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="SKYRIMNexusREST">
 			</endpoint>
 			<endpoint address="http://nmm.nexusmods.com/worldoftanks/" binding="webHttpBinding" bindingConfiguration="NexusBinding" contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi" name="WOTNexusREST">
