Added ini checks.

--- a/Fallout4/Fallout4.csproj
+++ b/Fallout4/Fallout4.csproj
@@ -71,6 +71,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Tools\Fallout4ToolLauncher.cs" />
+    <Compile Include="Tools\GamebryoIniReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
